ENH: 첫 렌딩페이지 수정

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>ccomit</title>
+  <title>ccommit - 개발자 취업은 씨커밋</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -110,40 +110,55 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>Powerful Digital Solutions With ccommit<span>.</span></h1>
-          <h2>We are team of talented digital marketers</h2>
+          <h1>1:1 맞춤형 <br>
+            개발자 멘토링<span>.</span></h1>
+<!--          <h2>많은 취준생 및 주니어 개발자들은 보여지는 <br>실력을 키우기 급급합니다.-->
+<!--            멘토링을 통해 <br>지식보다 지식을 얻는 방법을 알려드립니다.</h2>-->
         </div>
       </div>
 
       <div class="row gy-4 mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
-            <i class="ri-store-line"></i>
-            <h3><a href="">Lorem Ipsum</a></h3>
+              <i class="bi-book fs-1"></i>
+            <h3><a href="">이론 공부</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
-            <i class="ri-bar-chart-box-line"></i>
-            <h3><a href="">Dolor Sitema</a></h3>
+            <i class="bi-laptop fs-1"></i>
+            <h3><a href="">프로젝트 진행</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
-            <i class="ri-calendar-todo-line"></i>
-            <h3><a href="">Sedare Perspiciatis</a></h3>
+            <i class="bi-globe fs-1"></i>
+            <h3><a href="">서버 배포 & 프로세스 자동화</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
-            <i class="ri-paint-brush-line"></i>
-            <h3><a href="">Magni Dolores</a></h3>
+            <i class="bi-star fs-1"></i>
+            <h3><a href="">성능 테스트 & 성능 튜닝</a></h3>
+          </div>
+        </div>
+         <dib></dib>
+        <div class="col-xl-2 col-md-4">
+          <div class="icon-box">
+            <i class="bi-triangle fs-1"></i>
+            <h3><a href="">모니터링 & 트러블 슈팅</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
-            <i class="ri-database-2-line"></i>
-            <h3><a href="">Nemos Enimade</a></h3>
+            <i class="bi-eye fs-1"></i>
+            <h3><a href="">가상화 기술 적용</a></h3>
+          </div>
+        </div>
+        <div class="col-xl-2 col-md-4">
+          <div class="icon-box">
+            <i class="bi-bank fs-1"></i>
+            <h3><a href="">취업 지원</a></h3>
           </div>
         </div>
       </div>
