ENH: 여러 페이지 수정

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
         <div class="section-title">
           <h2>CCOMMIT 멘토링</h2>
-          <p>추천이유</p>
+          <p>이런 분들이 멘토링을 받으면 좋습니다.</p>
         </div>
 
         <div class="row">
@@ -241,23 +241,23 @@
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-receipt"></i>
-              <h4>현직 대기업 개발자 1:1 멘토링 서비스</h4>
+              <h4>자바 백엔드 분야로 전환하고 싶은 분</h4>
               <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-cube-alt"></i>
-              <h4>지식을 탐구하는 방법 지도</h4>
+              <h4>개발자를 준비하시는 분</h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-images"></i>
-              <h4>개발 외에 개발 블로그 작성법을 지도</h4>
+              <h4>현직자 이시지만 서비스 대기업으로 이직 하고싶으신 분</h4>
               <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-shield"></i>
-              <h4>모의 면접 진행</h4>
-              <p>면접에서 탐구한 지식을 효율적으로 전달하는 방법을 알려드립니다.</p>
+              <h4>대용량 서비스를 운영하는 방법에 대해 고민해보고 싶은 분</h4>
+              <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
             </div>
           </div>
         </div>
