--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
         <h1 class="logo me-auto me-lg-0">
             <a href="#hero">
                 <img class="img-fluid mb-1"
-                     src="assets/img/favicon/LOGO.png"
-                     width="50" height="30" alt="..."
-                     onmouseover="this.src='assets/img/favicon/favicon.png'"
-                     onmouseleave="this.src='assets/img/favicon/LOGO.png'"/>
+                     src="assets/img/favicon/favicon.png"
+                     width="50" height="30" alt="..."/>
                 ccommit
                 <!--          <span style="color: darkgreen">.</span>-->
             </a></h1>
@@ -362,8 +360,8 @@
                     <div class="col">
                         <div class="card">
                             <strong style="padding-top:10px;">1개월 신청(주2회,1회:1시간)</strong>
-                            <hr />
-                            <div class="card-body" style="padding-bottom: 23px;" >
+                            <hr/>
+                            <div class="card-body" style="padding-bottom: 33px;">
                                 <strong>600,000원</strong>
                                 <span style="color:red">(주 1회 변경시 - 100,000원)</span><br>
                             </div>
@@ -372,10 +370,8 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <div width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="textbox">
-                                <strong x="50%" y="50%">3개월 신청(주2회,1회:1시간)</strong>
-                            </div>
-                            <hr />
+                            <strong style="padding-top:10px;">3개월 신청(주2회,1회:1시간)</strong>
+                            <hr/>
                             <div class="card-body">
                                 <strong>1,700,000원</strong>
                                 <span style="color:red">(얼리버드 - 100,000원 할인)</span> <br>
@@ -385,10 +381,8 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <div width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="textbox">
-                                <strong x="50%" y="50%">6개월 신청(주2회,1회:1시간)</strong>
-                            </div>
-                            <hr />
+                            <strong style="padding-top:10px;">6개월 신청(주2회,1회:1시간)</strong>
+                            <hr/>
                             <div class="card-body">
                                 <strong class="card-text">3,300,000원</strong>
                                 <span style="color:red">(얼리버드 - 300,000원 할인)</span><br>
