--- a/index.html
+++ b/index.html
@@ -847,10 +847,11 @@
                         </p>
                         <div class="social-links mt-3">
 <!--                            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>-->
-                            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                            <a href="https://www.facebook.com/ccommit" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+                            <a href="https://www.instagram.com/c__commit/?igshid=YmMyMTA2M2Y%3D" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
 <!--                            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
-                            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/ccommit-5680b6204/" class="linkedin"><i class="bx bxl-linkedin" target="_blank"></i></a>
+                            <a href="https://www.youtube.com/@ccommit9983" class="youtube"><i class="bx bxl-youtube" target="_blank"></i></a>
                         </div>
                     </div>
                 </div>
