ENH: 프로젝트 페이지 및,수강후기 남음

--- a/index.html
+++ b/index.html
@@ -850,8 +850,8 @@
                             <a href="https://www.facebook.com/ccommit" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
                             <a href="https://www.instagram.com/c__commit/?igshid=YmMyMTA2M2Y%3D" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
 <!--                            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
-                            <a href="https://www.linkedin.com/in/ccommit-5680b6204/" class="linkedin"><i class="bx bxl-linkedin" target="_blank"></i></a>
-                            <a href="https://www.youtube.com/@ccommit9983" class="youtube"><i class="bx bxl-youtube" target="_blank"></i></a>
+                            <a href="https://www.linkedin.com/in/ccommit-5680b6204/" class="linkedin"  target="_blank"><i class="bx bxl-linkedin"></i></a>
+                            <a href="https://www.youtube.com/@ccommit9983" class="youtube" target="_blank"><i class="bx bxl-youtube" ></i></a>
                         </div>
                     </div>
                 </div>
