ENH: 전체 페이지 수정

--- a/index.html
+++ b/index.html
@@ -62,9 +62,14 @@
     <div class="container d-flex align-items-center justify-content-lg-between">
         <h1 class="logo me-auto me-lg-0">
             <a href="#hero">
+<!--                <img class="img-fluid mb-1"-->
+<!--                     src="assets/img/favicon/favicon.png"-->
+<!--                     width="50" height="30" alt="..."/>-->
                 <img class="img-fluid mb-1"
-                     src="assets/img/favicon/favicon.png"
-                     width="50" height="30" alt="..."/>
+                     src="assets/img/favicon/LOGO.png"
+                     width="50" height="30" alt="..."
+                     onmouseover="this.src='assets/img/favicon/favicon.png'"
+                     onmouseleave="this.src='assets/img/favicon/LOGO.png'"/>
                 ccommit
                 <!--          <span style="color: darkgreen">.</span>-->
             </a></h1>
@@ -575,7 +580,7 @@
             <div class="row no-gutters">
 <!--                <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start"-->
 <!--                     data-aos="fade-right" data-aos-delay="100"></div>-->
-                <img src="assets/img/counts-img.png" class="testimonial-img" alt="" style="width:550px; height:350px;">
+                <img src="assets/img/counts-img.jpg" class="testimonial-img" alt="" style="width:550px; height:350px;">
                 <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch" data-aos="fade-left"
                      data-aos-delay="100">
                     <div class="content d-flex flex-column justify-content-center">
@@ -586,7 +591,8 @@
                                     <i class="bi bi-emoji-smile"></i>
                                     <p>멘티 수</p>
                                     <span data-purecounter-start="0" data-purecounter-end="28"
-                                          data-purecounter-duration="2" class="purecounter"></span>
+                                          data-purecounter-duration="2" class="purecounter"
+                                          style="padding-top:4px;"></span>
 
                                 </div>
                             </div>
@@ -596,7 +602,8 @@
                                     <i class="bi bi-journal-richtext"></i>
                                     <p>프로젝트 수</p>
                                     <span data-purecounter-start="0" data-purecounter-end="7"
-                                          data-purecounter-duration="2" class="purecounter"></span>
+                                          data-purecounter-duration="2" class="purecounter"
+                                          style="padding-top:4px;"></span>
 
                                 </div>
                             </div>
@@ -616,7 +623,7 @@
                                     <p >졸업생 평균 연봉</p>
                                     <span data-purecounter-start="0" data-purecounter-end="4300"
                                           data-purecounter-duration="4" class="purecounter"
-                                          style="padding-top:4px;"></span>
+                                          style="padding-top:6px;"></span>
                                     <strong style="padding-left:130px;">만원</strong>
 
                                 </div>
