ENH: 전체 페이지 수정

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
     <div class="container d-flex align-items-center justify-content-lg-between">
         <h1 class="logo me-auto me-lg-0">
             <a href="#hero">
-                <img class="img-fluid mb-1"
-                     src="assets/img/favicon/favicon.png"
-                     width="50" height="30" alt="..."/>
 <!--                <img class="img-fluid mb-1"-->
-<!--                     src="assets/img/favicon/LOGO.png"-->
-<!--                     width="50" height="30" alt="..."-->
-<!--                     onmouseover="this.src='assets/img/favicon/favicon.png'"-->
-<!--                     onmouseleave="this.src='assets/img/favicon/LOGO.png'"/>-->
+<!--                     src="assets/img/favicon/favicon.png"-->
+<!--                     width="50" height="30" alt="..."/>-->
+                <img class="img-fluid mb-1"
+                     src="assets/img/favicon/LOGO.png"
+                     width="50" height="30" alt="..."
+                     onmouseover="this.src='assets/img/favicon/favicon.png'"
+                     onmouseleave="this.src='assets/img/favicon/LOGO.PNG'"/>
                 ccommit
                 <!--          <span style="color: darkgreen">.</span>-->
             </a></h1>
