ENH: 전체 페이지 수정

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 <!--                     src="assets/img/favicon/favicon.png"-->
 <!--                     width="50" height="30" alt="..."/>-->
                 <img class="img-fluid mb-1"
-                     src="assets/img/favicon/LOGO.png"
+                     src="assets/img/favicon/LOGO.PNG"
+                     alt="assets/img/favicon/favicon.png"
                      width="50" height="30" alt="..."
                      onmouseover="this.src='assets/img/favicon/LOGO.PNG'"
                      onmouseleave="this.src='assets/img/favicon/favicon.png'"
