ENH: 전체 페이지 수정

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                      src="assets/img/favicon/LOGO.PNG"
                      alt="assets/img/favicon/favicon.png"
                      width="50" height="30" alt="..."
-                     onmouseover="this.src='assets/img/favicon/LOGO.PNG'"
-                     onmouseleave="this.src='assets/img/favicon/favicon.png'"
+                     onmouseover="this.src='assets/img/favicon/favicon.png'"
+                     onmouseleave="this.src='assets/img/favicon/LOGO.PNG'"
                     onmo/>
                 ccommit
                 <!--          <span style="color: darkgreen">.</span>-->
