--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>ccommit - 개발자 취업은 씨커밋</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ccommit.k">
+    <meta property="og:title" content="개발자 멘토링">
+    <meta property="og:description" content="1:1 맞춤형 개발자 멘토링 서비스">
+    <meta property="og:image" content="https://www.ccommit.kr/assets/img/favicon/favicon.png">
 
     <!-- Favicons -->
     <!--  <link href="assets/img/favicon.png" rel="icon">-->
@@ -62,21 +67,16 @@
     <div class="container d-flex align-items-center justify-content-lg-between">
         <h1 class="logo me-auto me-lg-0">
             <a href="#hero">
-                <!--                <img class="img-fluid mb-1"-->
-                <!--                     src="assets/img/favicon/favicon.png"-->
-                <!--                     width="50" height="30" alt="..."/>-->
                 <img class="img-fluid mb-1"
                      src="assets/img/favicon/LOGO.PNG"
                      alt="assets/img/favicon/favicon.png"
                      width="50" height="30" alt="..."
                      onmouseover="this.src='assets/img/favicon/favicon.png'"
                      onmouseleave="this.src='assets/img/favicon/LOGO.PNG'"
-                     onmo/>
+                />
                 ccommit
-                <!--          <span style="color: darkgreen">.</span>-->
-            </a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+            </a>
+        </h1>
 
         <nav id="navbar" class="navbar order-last order-lg-0">
             <ul>
@@ -674,6 +674,19 @@
                             </p>
                         </div>
                     </div>
+                    <div class="swiper-slide">
+                        <div class="testimonial-item">
+                            <h3>곽OO</h3>
+                            <h4>3년차 서버 개발자</h4>
+                            <p>
+                                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                                JAVA나 CS 같은 수업 내용에 관한 부분도 좋지만 알고 싶어도 알 수가 없는 현직장에 관련된 얘기도 같이 들을 수 있던 게 가장 좋았습니다. <br>
+                                기초적인 CS 지식에 대한 검증과 복습을 통한 이해와 함께 구글링 시에 원하는 정보를 정확하게 찾아낼 수 있는 방법과 검색된 내용을 <br>
+                                무조건적으로 수용하는 게 아닌 제대로 된 정보인지를 판별하는 능력을 기를 수 있었습니다.
+                                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                            </p>
+                        </div>
+                    </div>
                     <!--                    <div class="swiper-slide">-->
                     <!--                        <div class="testimonial-item">-->
                     <!--&lt;!&ndash;                            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">&ndash;&gt;-->
@@ -747,10 +760,10 @@
                             </div>
                         </div>
                         <div class="member-info">
-                            <a  style="color:#FFC451;">ALEX(대표)</a> <br>
+                            <a style="color:#FFC451;">ALEX(대표)</a> <br>
                             <strong> - 넥슨 서버 개발자</strong>
                             <hr/>
-                            <span>- 카카오, 넷마블 등 여러 대기업 합격 최종 경험</span>
+                            <span>- 카카오, 넷마블 등 여러 대기업 최종 합격 </span>
                             <span>- 각종 개발 단체 경험 및 수상 </span>
                             <span>- 개발 경력 6년 이상</span>
                         </div>
