ENH: 전체 페이지 수정

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                      onmouseleave="this.src='assets/img/favicon/LOGO.PNG'"
                 />
                 ccommit
+<!--                <span>.</span>-->
             </a>
         </h1>
 
@@ -102,7 +103,9 @@
         <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
             <div class="col-xl-6 col-lg-8">
                 <h1>1:1 맞춤형 <br>
-                    개발자 멘토링<span>.</span></h1>
+                    개발자 멘토링
+<!--                    <span>.</span>-->
+                </h1>
                 <!--          <h2>많은 취준생 및 주니어 개발자들은 보여지는 <br>실력을 키우기 급급합니다.-->
                 <!--            멘토링을 통해 <br>지식보다 지식을 얻는 방법을 알려드립니다.</h2>-->
             </div>
@@ -380,7 +383,7 @@
                                 <strong style="font-size:2.0em;">500,000원</strong><br>
                                 <span style="color:gray">(주 2회 변경시 + 100,000원)</span>
                             </div>
-                            <a class="btn btn-warning" href="#contact">문의하기</a>
+                            <a class="btn btn-warning" href="#contact" style="font-weight:bold">문의하기</a>
                         </div>
                     </div>
                     <div class="col">
@@ -392,7 +395,7 @@
                                 <strong style="font-size:2.0em;">1,700,000원</strong> <br>
                                 <span style="color:red">(얼리버드 - 100,000원 할인)</span>
                             </div>
-                            <a class="btn btn-warning" href="#contact">문의하기</a>
+                            <a class="btn btn-warning" href="#contact" style="font-weight:bold">문의하기</a>
                         </div>
                     </div>
                     <div class="col">
@@ -404,7 +407,7 @@
                                 <strong style="font-size:2.0em;">3,300,000원</strong><br>
                                 <span style="color:red">(얼리버드 - 300,000원 할인)</span>
                             </div>
-                            <a class="btn btn-warning" href="#contact">문의하기</a>
+                            <a class="btn btn-warning" href="#contact" style="font-weight:bold">문의하기</a>
                         </div>
                     </div>
                 </div>
@@ -525,6 +528,10 @@
 
             </div>
 
+        </div>
+        <div style="text-align: center;">
+<!--            <h1>수료생들이 더 궁금하신가요?</h1>-->
+            <a class="btn btn-warning" href="#contact" style="font-weight:bold">프로젝트 더 보러가기</a>
         </div>
     </section><!-- End Portfolio Section -->
 
@@ -819,7 +826,9 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-info">
-                        <h3>ccommit<span>.</span></h3>
+                        <h3>ccommit
+<!--                            <span>.</span>-->
+                        </h3>
                         <p>
                             경기도 성남시 분당구 <br>
                             장미로 102<br><br>
@@ -873,7 +882,7 @@
 
     <div class="container">
         <div class="copyright">
-            <div class="small text-center text-muted">Copyright &copy; 2022 CCommit Company</div>
+            <div class="small text-center text-muted">Copyright &copy; 2023 CCommit Company</div>
         </div>
     </div>
 </footer><!-- End Footer -->
