ENH: 전체 페이지 수정

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
             </div>
 
             <div class="row" data-aos="fade-up" data-aos-delay="100">
-                <div class="col-lg-12 d-flex justify-content-center">
+                <div class="col-lg-12 d-flex justify-content-left">
                     <ul id="portfolio-flters">
                         <li data-filter="*" class="filter-active">All</li>
                         <li data-filter=".filter-publish">완료</li>
@@ -529,9 +529,12 @@
             </div>
 
         </div>
+        <br><br><br>
         <div style="text-align: center;">
-<!--            <h1>수료생들이 더 궁금하신가요?</h1>-->
-            <a class="btn btn-warning" href="#contact" style="font-weight:bold">프로젝트 더 보러가기</a>
+            <div class="section-title">
+                <p>수료생들 포트폴리오가 궁금하신가요? </p><br>
+                <a class="btn btn-warning" href="https://github.com/ccommit" style="font-weight:bold;color:white">프로젝트 더 보러가기</a>
+            </div>
         </div>
     </section><!-- End Portfolio Section -->
 
