ENH: 전체 페이지 수정

--- a/index.html
+++ b/index.html
@@ -533,7 +533,8 @@
         <div style="text-align: center;">
             <div class="section-title">
                 <p>수료생들 포트폴리오가 궁금하신가요? </p><br>
-                <a class="btn btn-warning" href="https://github.com/ccommit" style="font-weight:bold;color:white">프로젝트 더 보러가기</a>
+                <a class="btn btn-warning" href="https://github.com/ccommit" style="font-weight:bold;color:white"
+                target="_blank">프로젝트 더 보러가기</a>
             </div>
         </div>
     </section><!-- End Portfolio Section -->
