ENH: 전체 페이지 수정

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                             <h4>news</h4>
                             <p>네이버 뉴스 서비스의 백엔드 시스템</p>
                             <div class="portfolio-links">
-                                <a href="https://github.com/j-lab-edu/news/tree/main"
+                                <a href="https://github.com/ccommit/news/tree/main"
                                    target="_blank"
                                    title="news"><i class="bx bx-link"></i></a>
                             </div>
@@ -460,7 +460,7 @@
                             <h4>used-market-server</h4>
                             <p>번개장터 같은 중고거래 사이트</p>
                             <div class="portfolio-links">
-                                <a href="https://github.com/j-lab-edu/used-market-server"
+                                <a href="https://github.com/ccommit/used-market-server"
                                    title="used-market-server"
                                    target="_blank"><i class="bx bx-link"></i></a>
                             </div>
@@ -475,7 +475,7 @@
                             <h4>idolTicketing</h4>
                             <p>인터파크 티켓팅 같은 백엔드 서버</p>
                             <div class="portfolio-links">
-                                <a href="https://github.com/j-lab-edu/idolTicketing"
+                                <a href="https://github.com/ccommit/idolTicketing"
                                    title="idolTicketing"
                                    target="_blank"><i class="bx bx-link"></i></a>
                             </div>
@@ -489,7 +489,7 @@
                             <h4>community-server</h4>
                             <p>inven 과 같은 커뮤니티 서비스의 벡엔드 서버</p>
                             <div class="portfolio-links">
-                                <a href="https://github.com/j-lab-edu/community-server"
+                                <a href="https://github.com/ccommit/community-server"
                                    title="community-server"
                                    target="_blank"><i class="bx bx-link"></i></a>
                             </div>
@@ -503,7 +503,7 @@
                             <h4>shop-server</h4>
                             <p>네이버 쇼핑 같은 쇼핑 백엔드 시스템</p>
                             <div class="portfolio-links">
-                                <a href="https://github.com/j-lab-edu/shop-server"
+                                <a href="https://github.com/ccommit/shop-server"
                                    title="shop-server"
                                    target="_blank"><i class="bx bx-link"></i></a>
                             </div>
@@ -517,7 +517,7 @@
                             <h4>FundingServer</h4>
                             <p>와디즈 같은 펀딩 시스템의 백엔드 서버</p>
                             <div class="portfolio-links">
-                                <a href="https://github.com/j-lab-edu/FundingServer"
+                                <a href="https://github.com/ccommit/FundingServer"
                                    title="FundingServer"
                                    target="_blank"><i class="bx bx-link"></i></a>
                             </div>
@@ -839,6 +839,8 @@
                             <strong>Email:</strong> topojs8@naver.com<br>
                         </p>
                         <div class="social-links mt-3">
+                            <a href="https://github.com/ccommit" class="github" target="_blank"><i
+                                    class="bx bxl-github"></i></a>
                             <a href="https://www.facebook.com/ccommit" class="facebook" target="_blank"><i
                                     class="bx bxl-facebook"></i></a>
                             <a href="https://www.instagram.com/c__commit/?igshid=YmMyMTA2M2Y%3D" class="instagram"
