--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <div class="col-lg-4 col-md-6 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                        <h4><a href="#">이론 공부</a></h4>
+                        <h4><a href="#services">이론 공부</a></h4>
                         <p>Java 언어에 대한 깊은 이해 <br>
                             Spring 프레임워크 구성 요소 이해 <br>
                             객체지향 프로그래밍 & 디자인 패턴 이해</p>
@@ -294,7 +294,7 @@
                      data-aos-delay="200">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-file"></i></div>
-                        <h4><a href="#">프로젝트 진행</a></h4>
+                        <h4><a href="#services">프로젝트 진행</a></h4>
                         <p>코드리뷰를 통한 협업 경험 <br>
                             개발 블로그 작성 경험 <br>
                             Git-flow 브랜치 전략 경험</p>
@@ -305,7 +305,7 @@
                      data-aos-delay="300">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-tachometer"></i></div>
-                        <h4><a href="#">서버 배포 & 프로세스 자동화</a></h4>
+                        <h4><a href="#services">서버 배포 & 프로세스 자동화</a></h4>
                         <p>젠킨스 빌드 자동화툴 적용 <br>
                             클라우드 서비스 적용 <br>
                             배포 스크립트 작성 후 적용</p>
@@ -316,7 +316,7 @@
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-arch"></i></div>
-                        <h4><a href="#">클라우드 기술 적용</a></h4>
+                        <h4><a href="#services">클라우드 기술 적용</a></h4>
                         <p>아마존 서버 설치 및 배포 <br>
                             클라우드 환경에 CI/CD 적용 <br>
                             로드 벨런서 적용 및 알고리즘 탐구</p>
@@ -325,7 +325,7 @@
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-world"></i></div>
-                        <h4><a href="#">성능 테스트 & 성능 튜닝</a></h4>
+                        <h4><a href="#services">성능 테스트 & 성능 튜닝</a></h4>
                         <p>nGrinder or Locust or Gatling 툴 사용 <br>
                             의미있는 성능 지표 추출 <br>
                             병목지점 성능 튜닝</p>
@@ -335,7 +335,7 @@
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-slideshow"></i></div>
-                        <h4><a href="#">모니터링 & 트러블 슈팅</a></h4>
+                        <h4><a href="#services">모니터링 & 트러블 슈팅</a></h4>
                         <p>로깅 전략 탐구 <br>
                             예외 처리 전략 탐구 <br>
                             복구 및 안전한 아키텍처 설계</p>
@@ -345,7 +345,7 @@
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-arch"></i></div>
-                        <h4><a href="#">가상화 기술 적용</a></h4>
+                        <h4><a href="#services">가상화 기술 적용</a></h4>
                         <p>docker 및 가상화 컨테이너 적용 <br>
                             docker-compose 여러 컨테이너 실행 <br>
                             docker-registry 이미지 사용</p>
@@ -355,7 +355,7 @@
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-slideshow"></i></div>
-                        <h4><a href="#">취업 지원</a></h4>
+                        <h4><a href="#services">취업 지원</a></h4>
                         <p>네카라쿠배 지원 전략 지원 <br>
                             모의 기술 면접 진행 <br>
                             면접 피드백 진행</p>
