ENH: 전체 페이지 수정

--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
                      onmouseleave="this.src='assets/img/favicon/LOGO.PNG'"
                 />
                 ccommit
-<!--                <span>.</span>-->
             </a>
         </h1>
 
@@ -181,7 +180,6 @@
                     <div class="section-title">
                         <h2>ccommit 소개</h2>
                         <h3>C-COMMIT 이란?</h3>
-                        <!--                        <br>-->
                         <ul>
                             <li><i class="ri-check-double-line"></i> C(Career)는 개발, 직업, 직장 등을 걸쳐온 경력을 뜻합니다.</li>
                             <li><i class="ri-check-double-line"></i> Commit은 전념하다, 기록하다, 맡기다, 위임하다 의 의미를 지닙니다.</li>
@@ -194,9 +192,9 @@
                         ccommit은 단순히 서비스를 만드는 것에 그치지 않고, 더 깊은 곳을 보고 <strong>설계할 수 있는 개발자</strong>로 성장하는 것을 추구합니다.
                         <br><br>
                         클라우드 컴퓨팅 기술의 발전과 마이크로 서비스 패러다임의 확산에 따라 개발자는 더 크게 보고 확장성, 성능을 생각하며 설계할줄 알아야합니다.
-                        Devops가 발전함에 따라 <br><strong>개발-통합-배포-운영에 대한 지식</strong>을 갖춰야합니다.
+                        Devops가 발전함에 따라 <strong>개발-통합-배포-운영에 대한 지식</strong>을 갖춰야합니다.
                         <br><br>
-                        대용량 트래픽을 발생시키고, 이를 모니터링해 <strong>더 높은 성능 및 확장성 그리고 리팩토링 <br>경험</strong>이 있어야 합니다.
+                        대용량 트래픽을 발생시키고, 이를 모니터링해 <strong>더 높은 성능 및 확장성 그리고 리팩토링 경험</strong>이 있어야 합니다.
                         CI/CD, 코드 리뷰, 개발 블로그 작성 등을 진행해 일반적인 현직 개발자보다 더 많은 지식을 쌓게 합니다.
                         <br><br>
                         개발 프로세스에 대한 전반적인 것들을 관리해 드리기에 하나를 익힐 때마다 다음 스텝을 계속 제시해드리면서 끝 없이 깊은 지식을 쌓을 수 있도록 합니다.
@@ -532,7 +530,7 @@
         <br><br><br>
         <div style="text-align: center;">
             <div class="section-title">
-                <p>수료생들 포트폴리오가 궁금하신가요? </p><br>
+                <p style="color: gray">수료생들 포트폴리오가 궁금하신가요? </p><br>
                 <a class="btn btn-warning" href="https://github.com/ccommit" style="font-weight:bold;color:white"
                 target="_blank">프로젝트 더 보러가기</a>
             </div>
@@ -698,49 +696,6 @@
                             </p>
                         </div>
                     </div>
-                    <!--                    <div class="swiper-slide">-->
-                    <!--                        <div class="testimonial-item">-->
-                    <!--&lt;!&ndash;                            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">&ndash;&gt;-->
-                    <!--                            <h3>윤OO</h3>-->
-                    <!--                            <h4>전공자 취업 준비</h4>-->
-                    <!--                            <p>-->
-                    <!--                                <i class="bx bxs-quote-alt-left quote-icon-left"></i>-->
-                    <!--                                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam-->
-                    <!--                                duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.-->
-                    <!--                                <i class="bx bxs-quote-alt-right quote-icon-right"></i>-->
-                    <!--                            </p>-->
-                    <!--                        </div>-->
-                    <!--                    </div>-->
-
-                    <!--                    <div class="swiper-slide">-->
-                    <!--                        <div class="testimonial-item">-->
-                    <!--&lt;!&ndash;                            <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">&ndash;&gt;-->
-                    <!--                            <h3>곽OO</h3>-->
-                    <!--                            <h4>2년차 서버 개발자</h4>-->
-                    <!--                            <p>-->
-                    <!--                                <i class="bx bxs-quote-alt-left quote-icon-left"></i>-->
-                    <!--                                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat-->
-                    <!--                                minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore-->
-                    <!--                                labore illum veniam.-->
-                    <!--                                <i class="bx bxs-quote-alt-right quote-icon-right"></i>-->
-                    <!--                            </p>-->
-                    <!--                        </div>-->
-                    <!--                    </div>-->
-
-                    <!--                    <div class="swiper-slide">-->
-                    <!--                        <div class="testimonial-item">-->
-                    <!--&lt;!&ndash;                            <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">&ndash;&gt;-->
-                    <!--                            <h3>곽OO</h3>-->
-                    <!--                            <h4>Entrepreneur</h4>-->
-                    <!--                            <p>-->
-                    <!--                                <i class="bx bxs-quote-alt-left quote-icon-left"></i>-->
-                    <!--                                Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster-->
-                    <!--                                veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam-->
-                    <!--                                culpa fore nisi cillum quid.-->
-                    <!--                                <i class="bx bxs-quote-alt-right quote-icon-right"></i>-->
-                    <!--                            </p>-->
-                    <!--                        </div>-->
-                    <!--                    </div>&lt;!&ndash; End testimonial item &ndash;&gt;-->
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
@@ -830,8 +785,15 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-info">
-                        <h3>ccommit
-<!--                            <span>.</span>-->
+                        <h3 class="logo me-auto me-lg-0">
+                            <a href="#footer" style="color:white">
+                                <img class="img-fluid mb-1"
+                                     src="assets/img/favicon/LOGO.PNG"
+                                     alt="assets/img/favicon/LOGO.png"
+                                     width="30" height="20" alt="..."
+                                />
+                                ccommit
+                            </a>
                         </h3>
                         <p>
                             경기도 성남시 분당구 <br>
