--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
                             </div>
                         </div>
                         <div class="member-info">
-                            <a style="color:#FFC451;">ALEX(대표)</a> <br>
+                            <a style="color:#FFC451;">Alex(대표)</a> <br>
                             <strong> - 넥슨 서버 개발자</strong>
                             <hr/>
                             <span>- 카카오, 넷마블 등 여러 대기업 최종 합격 </span>
@@ -815,7 +815,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-7 col-md-6 footer-links">
+                <div class="col-lg-8 col-md-6 footer-links">
                     <h4>자주 묻는 질문</h4>
                     <details>
                         <summary>멘토링 장소는 어떻게 정하나요?</summary>
@@ -842,6 +842,10 @@
                     <details style="padding-top:12px;">
                         <summary>멘토링 시작 전 준비할 사항이 있을까요?</summary>
                         <span style="color:gray">멘토와 상담 전 포트폴리오가 있다면 정리 부탁드립니다. 그외엔 상담시에 말씀드립니다.</span>
+                    </details>
+                    <details style="padding-top:12px;">
+                        <summary>질문 및 답변 시간은 정해져 있나요?</summary>
+                        <span style="color:gray">따로 정해져 있지 않습니다. 질문 사항이 있으시다면 안내드린 별도 채널에 남겨주시면 멘토가 실시간으로 답변해드립니다.</span>
                     </details>
                 </div>
             </div>
