--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
                     </details>
                     <details style="padding-top:12px;">
                         <summary>질문 및 답변 시간은 정해져 있나요?</summary>
-                        <span style="color:gray">따로 정해져 있지 않습니다. 질문 사항이 있으시다면 안내드린 별도 채널에 남겨주시면 멘토가 실시간으로 답변해드립니다.</span>
+                        <span style="color:gray">따로 정해져 있지 않습니다. 질문 사항이 있으시다면 안내드린 별도 채널에 남겨주시면 멘토가 상시로 답변해드립니다.</span>
                     </details>
                 </div>
             </div>
