--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
             <div class="section-title row justify-content-center">
                 <div class="col-lg-8 col-xl-6 text-center">
                     <span style="font-size:1.5em;">
-                        <a href="https://form.office.naver.com/form/responseView.cmd?formkey=OGJlZjEwZTAtZWQ3NC00Y2M3LWIzY2EtODFiYjg1OGMxNGJj&sourceId=editor"
+                        <a href="https://forms.gle/nKxQrvw8Be8g68FLA"
                            style="color:#FFC451;text-decoration:underline;"
                            target="_blank">신청서</a></span>
                     <span style="font-size:1.3em;">
