--- a/index.html
+++ b/index.html
@@ -731,6 +731,7 @@
                             <hr/>
                             <span>- 카카오, 넷마블 등 여러 대기업 최종 합격 </span>
                             <span>- 각종 개발 단체 경험 및 수상 </span>
+                            <span>- 코딩 수업 횟수 500회 이상</span>
                             <span>- 개발 경력 6년 이상</span>
                         </div>
                     </div>
