--- a/index.html
+++ b/index.html
@@ -808,10 +808,10 @@
                                     class="bx bxl-facebook"></i></a>
                             <a href="https://www.instagram.com/c__commit/?igshid=YmMyMTA2M2Y%3D" class="instagram"
                                target="_blank"><i class="bx bxl-instagram"></i></a>
-                            <a href="https://www.linkedin.com/in/ccommit-5680b6204/" class="linkedin" target="_blank"><i
-                                    class="bx bxl-linkedin"></i></a>
-                            <a href="https://www.youtube.com/@ccommit9983" class="youtube" target="_blank"><i
-                                    class="bx bxl-youtube"></i></a>
+<!--                            <a href="https://www.linkedin.com/in/ccommit-5680b6204/" class="linkedin" target="_blank"><i-->
+<!--                                    class="bx bxl-linkedin"></i></a>-->
+<!--                            <a href="https://www.youtube.com/@ccommit9983" class="youtube" target="_blank"><i-->
+<!--                                    class="bx bxl-youtube"></i></a>-->
                         </div>
                     </div>
                 </div>
