ENH: 멘토 소개 수정

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             <div class="section-title">
                 <p style="color: gray">수료생들 포트폴리오가 궁금하신가요? </p><br>
                 <a class="btn btn-warning" href="https://github.com/ccommit" style="font-weight:bold;color:white"
-                target="_blank">프로젝트 더 보러가기</a>
+                   target="_blank">프로젝트 더 보러가기</a>
             </div>
         </div>
     </section><!-- End Portfolio Section -->
@@ -711,28 +711,29 @@
                 <h2>Mentor</h2>
                 <p>멘토 소개</p>
             </div>
-
             <div class="row">
 
                 <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
                     <div class="member" data-aos="fade-up" data-aos-delay="100">
                         <div class="member-img">
-                            <!--                            <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">-->
+                            <img src="assets/img/testimonials/user.png"
+                                 style="max-width:40%; height:35%; margin: 20px -60px 0 80px;" alt="">
                             <div class="social">
-                                <a href="#"><i class="bi bi-twitter"></i></a>
-                                <a href="#"><i class="bi bi-facebook"></i></a>
-                                <a href="#"><i class="bi bi-instagram"></i></a>
-                                <a href="#"><i class="bi bi-linkedin"></i></a>
+<!--                                <a href="#"><i class="bi bi-twitter"></i></a>-->
+<!--                                <a href="#"><i class="bi bi-facebook"></i></a>-->
+<!--                                <a href="#"><i class="bi bi-instagram"></i></a>-->
+<!--                                <a href="#"><i class="bi bi-linkedin"></i></a>-->
+                                <a href="https://kmong.com/gig/353197" target="_blank"><i class="bi bi-link"></i></a>
+                                <a href="https://taling.me/Talent/Detail/40572" target="_blank"><i class="bi bi-link"></i></a>
                             </div>
                         </div>
-                        <div class="member-info">
-                            <a style="color:#FFC451;">Alex(대표)</a> <br>
+                        <div class="member-info" style="padding-top:1px;">
+                            <a style="color:#FFC451; img-fluid;">Alex</a> <br>
                             <strong> - 넥슨 서버 개발자</strong>
-                            <hr/>
+                            <hr style="margin:0.5rem"/>
                             <span>- 카카오, 넷마블 등 여러 대기업 최종 합격 </span>
+                            <span>- 개발 경력 6년 이상, 수업 경력 2년 이상 </span>
                             <span>- 각종 개발 단체 경험 및 수상 </span>
-                            <span>- 수업 경력 2년 이상, 횟수 500회 이상</span>
-                            <span>- 개발 경력 6년 이상</span>
                         </div>
                     </div>
                 </div>
