--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
                                     class="bx bxl-github"></i></a>
                             <a href="https://www.facebook.com/ccommit" class="facebook" target="_blank"><i
                                     class="bx bxl-facebook"></i></a>
-                            <a href="https://www.instagram.com/c__commit/?igshid=YmMyMTA2M2Y%3D" class="instagram"
+                            <a href="https://www.instagram.com/ccommit.kr/" class="instagram"
                                target="_blank"><i class="bx bxl-instagram"></i></a>
 <!--                            <a href="https://www.linkedin.com/in/ccommit-5680b6204/" class="linkedin" target="_blank"><i-->
 <!--                                    class="bx bxl-linkedin"></i></a>-->
