ENH: 네이버 검색 최적화 추가

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="개발자 멘토링">
     <meta property="og:description" content="1:1 맞춤형 개발자 멘토링 서비스">
     <meta property="og:image" content="https://www.ccommit.kr/assets/img/favicon/favicon.png">
+    <meta name="naver-site-verification" content="ecbbc1a8d8efd794e1b0e5b10b9dda9491890983" />
 
     <!-- Favicons -->
     <!--  <link href="assets/img/favicon.png" rel="icon">-->
