--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:description" content="1:1 맞춤형 개발자 멘토링 서비스">
     <meta property="og:image" content="https://www.ccommit.kr/assets/img/favicon/favicon.png">
     <meta name="naver-site-verification" content="ecbbc1a8d8efd794e1b0e5b10b9dda9491890983" />
+    <meta name="google-site-verification" content="T12CU9sPh23jMEebIWWDqVa-5Rh_Zu_WYn_UQr-BmHc" />
 
     <!-- Favicons -->
     <!--  <link href="assets/img/favicon.png" rel="icon">-->
