--- a/index.html
+++ b/index.html
@@ -831,15 +831,15 @@
                     </details>
                     <details style="padding-top:12px;">
                         <summary>개발을 완전 처음 하는데 수강할 수 있을까요?</summary>
-                        <span style="color:gray">완전 처음 하시는 분들도 가능은 하지만, 기초부터 쌓아가야 하기에 진도가 더딜 수 있습니다.</span>
+                        <span style="color:gray">비전공자이시거나 기초 지식이 없으시면 진도가 느릴 수 있습니다. 다만 공부 방향성을 확실하게 잡아드립니다. </span>
                     </details>
                     <details style="padding-top:12px;">
                         <summary>환불 정책은 어떻게 되나요?</summary>
-                        <span style="color:gray">만약 중간에 그만두게 되실 경우, 남은 기간을 하루 단위로 계산하여 남은 날짜 만큼의 금액을 환불해 드립니다.</span>
+                        <span style="color:gray">만약 중간에 멘토링을 그만두게 되실 경우, 남은 기간을 계산하여 멘토링 비용을 환불해 드립니다.</span>
                     </details>
                     <details style="padding-top:12px;">
                         <summary>멘토링 비용 외에 추가 비용이 있을까요?</summary>
-                        <span style="color:gray">추가 비용은 받고 있지 않습니다. 다만 추천 해드리는 도서와 인터넷 강의는 직접 구매하셔야 하기 때문에, 해당하는 부수적인 비용이 생길 수 있습니다.</span>
+                        <span style="color:gray">멘토링 커리큘럼에 포함되어있는 도서와 인터넷 강의는 직접 구매하셔야 하기 때문에, 해당하는 부수적인 비용이 생길 수 있습니다.</span>
                     </details>
                     <details style="padding-top:12px;">
                         <summary>멘토링 시작 날짜는 정확히 언제인가요?</summary>
@@ -847,7 +847,7 @@
                     </details>
                     <details style="padding-top:12px;">
                         <summary>멘토링 시작 전 준비할 사항이 있을까요?</summary>
-                        <span style="color:gray">멘토와 상담 전 포트폴리오가 있다면 정리 부탁드립니다. 그외엔 상담시에 말씀드립니다.</span>
+                        <span style="color:gray">멘토와 상담 전 포트폴리오or 개발블로그가 있다면 정리하여 회신 부탁드립니다. 그외엔 상담시에 말씀드립니다.</span>
                     </details>
                     <details style="padding-top:12px;">
                         <summary>질문 및 답변 시간은 정해져 있나요?</summary>
