ENH: F-Lab 박중수님의 언급으로 관련 내용 삭제 - 먼저 만든 업체의 견제를 좋은 에너지로 승화시키자

--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
                         대용량 트래픽을 발생시키고, 이를 모니터링해 <strong>더 높은 성능 및 확장성 그리고 리팩토링 경험</strong>을 하게 도와드립니다.
                         CI/CD, 코드 리뷰, 개발 블로그 작성 등을 진행해 보통의 개발자 보다 더 많은 지식을 쌓게 합니다.
                         <br><br>
-                        개발 프로세스에 대한 전반적인 것들을 코칭해 드리겠습니다. 탐구한 개발 지식을 누구에게나 <strong>이해하기 쉽게 설명할 수 있게</strong> 도와드립니다.
+                        개발 프로세스에 대한 전반적인 것들을 코칭해 드리겠습니다. 탐구한 개발 지식을 <strong>근거를 바탕으로 설명할 수 있게</strong> 도와드립니다.
                         <br><br>
-                        현재 CCOMMIT에서 많은 개발자들이 멘토링을 받으며 많은 것을 배우고 만족도가 높다는 평을 주셨으며, <strong>더 좋은 대우와 복지를 주는 회사로 이직에
+                        현재 CCOMMIT에서 많은 개발자들이 멘토링을 받으며 많은 것을 배우고 성장하고 있다는 평을 주셨으며, <strong>더 좋은 대우와 복지를 주는 회사로 이직에
                         성공</strong>하고 있습니다.</p>
                 </div>
             </div>
