ENH: 커리큘럼 페이지 추가 및 연동

--- a/index.html
+++ b/index.html
@@ -284,7 +284,16 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="icon-box">
-                        <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                        <div class="icon"><i class="bi bi-signpost"></i></div>
+                        <h4><a href="https://sepia-coat-481.notion.site/0-5f44fd43240c41d0a168a27c353bad64" target="_blank">사전 준비</a></h4>
+                        <p>기존 포트폴리오 정리 <br>
+                            목표 회사 & 도메인 정하기 <br>
+                            성장하는 개발자 마음가짐 탐구 </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bi bi-book"></i></div>
                         <h4><a href="#services">이론 공부</a></h4>
                         <p>Java 언어에 대한 깊은 이해 <br>
                             Spring 프레임워크 구성 요소 이해 <br>
@@ -306,7 +315,7 @@
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
                      data-aos-delay="300">
                     <div class="icon-box">
-                        <div class="icon"><i class="bx bx-tachometer"></i></div>
+                        <div class="icon"><i class="bx bx-world"></i></div>
                         <h4><a href="#services">서버 배포 & 프로세스 자동화</a></h4>
                         <p>젠킨스 빌드 자동화툴 적용 <br>
                             클라우드 서비스 적용 <br>
@@ -317,7 +326,7 @@
 
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
                     <div class="icon-box">
-                        <div class="icon"><i class="bx bx-arch"></i></div>
+                        <div class="icon"><i class="bi bi-cloud"></i></div>
                         <h4><a href="#services">클라우드 기술 적용</a></h4>
                         <p>아마존 서버 설치 및 배포 <br>
                             클라우드 환경에 CI/CD 적용 <br>
@@ -326,7 +335,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
                     <div class="icon-box">
-                        <div class="icon"><i class="bx bx-world"></i></div>
+                        <div class="icon"><i class="bx bx-tachometer"></i></div>
                         <h4><a href="#services">성능 테스트 & 성능 튜닝</a></h4>
                         <p>nGrinder or Locust or Gatling 툴 사용 <br>
                             의미있는 성능 지표 추출 <br>
@@ -346,7 +355,7 @@
 
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
                     <div class="icon-box">
-                        <div class="icon"><i class="bx bx-arch"></i></div>
+                        <div class="icon"><i class="bi bi-window-split"></i></div>
                         <h4><a href="#services">가상화 기술 적용</a></h4>
                         <p>docker 및 가상화 컨테이너 적용 <br>
                             docker-compose 여러 컨테이너 실행 <br>
@@ -356,7 +365,7 @@
 
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
                     <div class="icon-box">
-                        <div class="icon"><i class="bx bx-slideshow"></i></div>
+                        <div class="icon"><i class="bi bi-people"></i></div>
                         <h4><a href="#services">취업 지원</a></h4>
                         <p>네카라쿠배 지원 전략 지원 <br>
                             모의 기술 면접 진행 <br>
