ENH: 상세 커리큘럼 페이지 추가 및 연동

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <div class="col-lg-4 col-md-6 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="icon-box">
                         <div class="icon"><i class="bi bi-book"></i></div>
-                        <h4><a href="#services">이론 공부</a></h4>
+                        <h4><a href="https://sepia-coat-481.notion.site/1-6e39618af9774dac864914a29f226b37">이론 공부</a></h4>
                         <p>Java 언어에 대한 깊은 이해 <br>
                             Spring 프레임워크 구성 요소 이해 <br>
                             객체지향 프로그래밍 & 디자인 패턴 이해</p>
@@ -305,7 +305,7 @@
                      data-aos-delay="200">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-file"></i></div>
-                        <h4><a href="#services">프로젝트 진행</a></h4>
+                        <h4><a href="https://sepia-coat-481.notion.site/2-debc40dac89b4c9385b07ad8e6a6a87b">프로젝트 진행</a></h4>
                         <p>코드리뷰를 통한 협업 경험 <br>
                             개발 블로그 작성 경험 <br>
                             Git-flow 브랜치 전략 경험</p>
@@ -316,7 +316,7 @@
                      data-aos-delay="300">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-world"></i></div>
-                        <h4><a href="#services">서버 배포 & 프로세스 자동화</a></h4>
+                        <h4><a href="https://sepia-coat-481.notion.site/3-884b2dc06d52433198eb80b25c741e44">서버 배포 & 프로세스 자동화</a></h4>
                         <p>젠킨스 빌드 자동화툴 적용 <br>
                             클라우드 서비스 적용 <br>
                             배포 스크립트 작성 후 적용</p>
@@ -327,7 +327,7 @@
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
                     <div class="icon-box">
                         <div class="icon"><i class="bi bi-cloud"></i></div>
-                        <h4><a href="#services">클라우드 기술 적용</a></h4>
+                        <h4><a href="https://sepia-coat-481.notion.site/4-66b19332b3854fb3a7324d07c6f62fe9">클라우드 기술 적용</a></h4>
                         <p>아마존 서버 설치 및 배포 <br>
                             클라우드 환경에 CI/CD 적용 <br>
                             로드 벨런서 적용 및 알고리즘 탐구</p>
@@ -337,7 +337,7 @@
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-tachometer"></i></div>
                         <h4><a href="#services">성능 테스트 & 성능 튜닝</a></h4>
-                        <p>nGrinder or Locust or Gatling 툴 사용 <br>
+                        <p>Jmeter or Locust or Gatling 툴 사용 <br>
                             의미있는 성능 지표 추출 <br>
                             병목지점 성능 튜닝</p>
                     </div>
@@ -367,7 +367,7 @@
                     <div class="icon-box">
                         <div class="icon"><i class="bi bi-people"></i></div>
                         <h4><a href="#services">취업 지원</a></h4>
-                        <p>네카라쿠배 지원 전략 지원 <br>
+                        <p>네카라쿠배+3N 지원 전략 지원 <br>
                             모의 기술 면접 진행 <br>
                             면접 피드백 진행</p>
                     </div>
